--- a/ex.html
+++ b/ex.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,10 +11,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="about.css">
-  <link rel="stylesheet" href="servcies.css">
-  <link rel="stylesheet" href="contact.css">
-
 </head>
 <body>
   <nav>
@@ -26,59 +21,26 @@
     </label>
     <label class="logo">VEHICLE CENTRE</label>
     <ul>
-    <li><a  href="index.html">Home</a></li>
+    <li><a class="active" href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a  href="services.html">Services</a></li>
-      <li><a class="active" href="HELP AND SUPPORT.html">Contact</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="HELP AND SUPPORT.html">Contact</a></li>
       <li><a href="login.html">Login</a></li>
     </ul>
   </div>
   </nav>
-  <footer>
-    <div class="content">
-      <div class="top">
-        <div class="logo-details">
-          <i class="fab fa-slack"></i>
-          <span class="logo_name">VEHICLE CENTRE</span>
-        </div>
-        <div class="con">
-          <div class="cont">
-             <h1>Contact Us</h1>
-             <form  >
-              
-                 <h1>Name</h1>
-                 <input type="text" id="First Name" placeholder="First name"required>
-                 <input type="text" id="Last Name" placeholder="Last Name"required>
-                 <h1>Mail Address</h1>
-                 <input width="100%" type="email" id="emai" placeholder="Your Mail" required>
-                 <h1>Pone No</h1>
-                 <input type="text" id="Phone No" placeholder="No"required>
-                 <h1>Comment</h1>
-                 <textarea name="" id="" cols="30" rows="10"></textarea>
-                 
-                 <input type="Submit" value="Send" id="button">
-             </form>
- 
-         </div>
-         </div>
-        <div class="media-icons">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-        </div>
-      </div>
-      </span>
-      </div>
-    </div>
-  </footer>
-  
+
 </body>
+<div class="bu">
+  <a href="login.html">
+    <button  style="  transition:.04s; width: 200px; height: 70px; align-items:center; color:beige; font-size: 30px; margin-top:200px;margin-left:600px;border-radius:30px;" >login</button>
+  </a>
+</div>
+
+
+
 <div class="foter">
-  <h1>INTE/MG/1730/09/21</h1>
+   <h1>INTE/MG/1730/09/21</h1>
   <h1> &copy; Sandra @2023 </h1>
 </div>
 </html>
-
-
