--- a/index.html
+++ b/index.html
@@ -25,12 +25,20 @@
       <li><a href="about.html">About</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="HELP AND SUPPORT.html">Contact</a></li>
-      <li><a href="login.html">Login</a></li>
+  
     </ul>
   </div>
   </nav>
 
 </body>
+<div class="bu">
+  <a href="login.html">
+    <button  style="  transition:.04s; width: 200px; height: 70px; align-items:center; color:beige; font-size: 30px; margin-top:200px;margin-left:600px;border-radius:30px;" >login</button>
+  </a>
+</div>
+
+
+
 <div class="foter">
    <h1>INTE/MG/1730/09/21</h1>
   <h1> &copy; Sandra @2023 </h1>
